src/angular/styles/_typography.scss
/* ... */
.sbb-panel-above {
  border-radius: var(--sbb-border-radius) var(--sbb-border-radius) 0 0;
  border-top-width: var(--sbb-border-width);
  border-top-style: solid;
  border-bottom: none;
  top: var(--sbb-box-shadow-horizontal-border-offset-top-above);
  box-shadow: var(--sbb-box-shadow-horizontal-border-top);
}

.sbb-panel-padded {
  padding-top: calc(#{sbb.pxToRem(10)} * var(--sbb-scaling-factor));
  padding-bottom: calc(#{sbb.pxToRem(10)} * var(--sbb-scaling-factor));

  :where(html.sbb-lean) & {
    padding-top: sbb.pxToRem(4);
    padding-bottom: sbb.pxToRem(4);
  }
}

.sbb-input-with-open-panel:not(.sbb-input-with-open-panel-above).sbb-input-element,
.sbb-input-with-open-panel:not(.sbb-input-with-open-panel-above) > .sbb-input-element {
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.sbb-input-with-open-panel-above.sbb-input-element,
.sbb-input-with-open-panel-above > .sbb-input-element {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;

  box-shadow: var(--sbb-box-shadow-below);
}

// ----------------------------------------------------------------------------------------------------
// Sbb Menu
// ----------------------------------------------------------------------------------------------------

$menuItemPaddingLeftRightStandard: 14;
$menuItemPaddingTopBottom: 4;

.sbb-menu-item {
  @include sbb.ellipsis;
  @include sbb.buttonResetFrameless;

  position: relative;
  display: block;
  text-decoration: none;
  padding: calc(#{sbb.pxToRem(4)} * var(--sbb-scaling-factor))
    calc(#{sbb.pxToRem(14)} * var(--sbb-scaling-factor));
  text-align: left;
  max-width: 100%;
  cursor: pointer;
  outline: 0;
  color: var(--sbb-color-weak-accent);
  font-size: var(--sbb-font-size);
  line-height: var(--sbb-line-height-medium);

  :where(html.sbb-lean) & {
    padding-left: sbb.pxToRem(8);
    padding-right: sbb.pxToRem(8);
  }

  &:not(.sbb-focused) strong {
    color: var(--sbb-color-text);
  }

  &:is(.sbb-selected, .sbb-active) {
    color: var(--sbb-color-text);

    :where(html.sbb-lean) & {
      @include sbb.sbbMenuItemBlackLean();
    }
  }

  &:is(:disabled, [disabled], .sbb-disabled) {
    cursor: default;
    opacity: 0.5;
    @include sbb.user-select(none);
  }

  &:is(:not(:disabled):not([disabled]):not(.sbb-disabled):is(:hover, :focus), .sbb-focused) {
    :is(&, & strong) {
      color: var(--sbb-color-red);

      :where(html.sbb-lean) & {
        @include sbb.sbbMenuItemRedLean();
      }
    }
  }

  .sbb-icon {
    line-height: 0;
    margin: sbb.pxToRem(-7) 0 sbb.pxToRem(-7) 0;
    transform: translateY(calc(#{sbb.pxToRem(7)} * var(--sbb-scaling-factor)));
    width: var(--sbb-icon-size-default);
    height: var(--sbb-icon-size-default);

    :where(html:not(.sbb-lean)) & {
      @include sbb.mq($from: desktop4k) {
        margin-top: sbb.pxToRem(-12);
        margin-bottom: sbb.pxToRem(-12);
      }
      @include sbb.mq($from: desktop5k) {
        margin-top: sbb.pxToRem(-15);
        margin-bottom: sbb.pxToRem(-15);
      }
    }
    :where(html.sbb-lean) & {
      margin: sbb.pxToRem(-9) 0 sbb.pxToRem(-9) 0;
    }
  }

  > .sbb-icon:first-child {
    float: left; // used to ignore users whitespace and to ensure margin is correct
    margin-right: calc(#{sbb.pxToRem(11)} * var(--sbb-scaling-factor));
    margin-left: calc(#{sbb.pxToRem(-1)} * var(--sbb-scaling-factor));

    :where(html.sbb-lean) & {
      margin-right: sbb.pxToRem(8);
      margin-left: 0;
    }
  }
}

.sbb-menu-group {
  display: block;

  .sbb-menu-item {
    padding-left: calc(#{sbb.pxToRem(22)} * var(--sbb-scaling-factor));

    :where(html.sbb-lean) & {
      padding-left: sbb.pxToRem(16);
    }
  }

  &:first-child > .sbb-label:first-child {
    padding-top: calc(#{sbb.pxToRem(16)} * var(--sbb-scaling-factor));

    .sbb-panel-padded > & {
      padding-top: calc(#{sbb.pxToRem(6)} * var(--sbb-scaling-factor));
    }
  }

  .sbb-label:where(:not(.sbb-option-hint)) {
    padding-top: calc(#{sbb.pxToRem(22)} * var(--sbb-scaling-factor));

    :where(html.sbb-lean) & {
      padding-top: sbb.pxToRem(12);
    }
  }

  :is(& + &, .sbb-menu-item + &, & + .sbb-menu-item) {
    border-top: var(--sbb-border-width-thin) solid var(--sbb-color-cloud);
    margin-top: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));

    :where(html.sbb-lean) & {
      margin-top: sbb.pxToRem(4);
    }

    .sbb-label:where(:not(.sbb-option-hint)) {
      padding-top: calc(#{sbb.pxToRem(16)} * var(--sbb-scaling-factor));

      :where(html.sbb-lean) & {
        padding-top: sbb.pxToRem(8);
      }
    }
  }

  & + .sbb-menu-item {
    padding-top: calc(#{sbb.pxToRem(14)} * var(--sbb-scaling-factor));

    :where(html.sbb-lean) & {
      padding-top: sbb.pxToRem(8);
    }
  }
}

// ----------------------------------------------------------------------------------------------------
// Sbb Tooltip
// ----------------------------------------------------------------------------------------------------

.sbb-tooltip-trigger,
.sbb-tooltip-icon {
  line-height: 0;
  cursor: pointer;

  .sbb-tooltip-inline & {
    vertical-align: text-bottom;
    margin-bottom: calc(sbb.pxToRem(-3.5) * var(--sbb-scaling-factor));
  }
}

:is(.sbb-tooltip-icon, .sbb-tooltip-trigger):is(:active, :hover, :focus),
.sbb-tooltip-trigger-active {
  outline: none;
  color: var(--sbb-color-call-to-action-hover);
  border-color: var(--sbb-color-call-to-action-hover);
}
/* ... */

